--- a/login.html
+++ b/login.html
@@ -1,32 +1,38 @@
 <html>
   <head>
-    <title>Flask Intro - login page</title>
+    <title>login page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="static/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </head>
-  <body>
+  <body class="bg-info">
 
     <nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Autistica</a>
     </nav>
+<!-- style="background-color:#ffcc00;"-->
+    <div class="col-3">
 
-    <div class="container h-100 row align-items-center">
-      <div class=" container align-items-center">
-        <h1 class="center">Please login</h1>
+    </div>
+
+    <div class="container col-6 align-items-center align-content-center mt-5 bg-light">
+      <div class=" container">
+        <h4 class="align-self-center">Welcome back! Please login</h4>
       </div>
       <br>
       <form action="" method="post">
-        <input type="text" placeholder="Username" name="username" value="{{
+        <input class= "col-12 mb-2 border-light" type="text" placeholder="Username" name="username" value="{{
           request.form.username }}">
-         <input type="password" placeholder="Password" name="password" value="{{
+         <input class= "col-12 mb-2 border-light" type="password" placeholder="Password" name="password" value="{{
           request.form.password }}">
-        <input class="btn btn-default" type="submit" value="Login">
+        <input class=" col-12 btn btn-default border-light bg-primary" type="submit" value="Login">
       </form>
       {% if error %}
         <p class="error"><strong>Error:</strong> {{ error }}
       {% endif %}
     </div>
+
+    <div class="col-3">
+
+    </div>
   </body>
 </html>
-
-
